temp fix for horizontal overflow

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -3,7 +3,7 @@
 @tailwind utilities;
 
 body {
-  @apply bg-light-primary text-light-text dark:bg-dark-primary dark:text-dark-text scroll-smooth select-none;
+  @apply bg-light-primary text-light-text dark:bg-dark-primary dark:text-dark-text scroll-smooth select-none overflow-x-hidden;
 }
 
 a {
